[metadata]
name = example-package-Joe-Jackson
version = 0.0.2
author = Joe Jackson
author_email = joseph.jackson@port.ac.uk
description = This is just a test package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Jacks0nJ/Package_test.git
project_urls =
    Bug Tracker = https://github.com/Jacks0nJ/Package_test/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
